# gerador-e-checker-de-cpf

./: .gitignore  CHANGELOG.md  CHANGELOG.txt  DEPLOY.md  LICENSE.txt  MANIFEST.in  README.md  cpf.py  exec.py  pyproject.toml  setup.py
cpf/: __init__.py
examples/: README.md  cli_cnpj.py  cli_legacy.py  cli_modern.py
src/cnpj/: __init__.py
src/cnpj/application/: __init__.py  generate_cnpj.py  validate_cnpj.py
src/cnpj/domain/: __init__.py  entities.py
src/cnpj/infrastructure/: __init__.py  cnpj_generator.py  cnpj_validator.py
src/cnpj/presentation/: __init__.py  api.py
src/cpf/: __init__.py
src/cpf/application/: __init__.py  generate_cpf.py  validate_cpf.py
src/cpf/domain/: __init__.py  entities.py  region.py
src/cpf/infrastructure/: __init__.py  cpf_generator.py  cpf_validator.py
src/cpf/presentation/: __init__.py  api.py
tests/: __init__.py
tests/integration/: __init__.py  test_api.py  test_cnpj_api.py
tests/unit/: __init__.py  test_cnpj_entities.py  test_cnpj_generator.py  test_cnpj_validator.py  test_entities.py  test_generator.py  test_validator.py
